@@ -140,13 +140,10 @@ extern long  cff_read_fdarray (cff_font *cff);
 extern long  cff_read_private (cff_font *cff);
 
 /* String */
-extern int   cff_match_string  (cff_font *cff, const char *str, s_SID sid);
 extern char *cff_get_string    (cff_font *cff, s_SID id);
 extern long  cff_get_sid       (cff_font *cff, const char *str);
 extern long  cff_get_seac_sid  (cff_font *cff, const char *str);
 extern s_SID cff_add_string    (cff_font *cff, const char *str, int unique);
 extern void  cff_update_string (cff_font *cff);
-
-#define cff_is_stdstr(s) (cff_get_sid(NULL, (s)) >= 0)
 
 #endif /* _CFF_H_ */
